[package]
name = "velas"
version = "0.1.0"
authors = ["Andrew Bednoff <andrcmdr@commandr.stream>"]
license = "GNU General Public License v2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibclib = { path = "../zcash-zebra/ibclib" }
zebra-chain = { path = "../zcash-zebra/zebra-chain" }

futures-util = "0.3.5"

[patch.crates-io]
abscissa_core = { git = "https://github.com/yaahc/abscissa.git", rev = "41d342a9344e38442b2211b07f28a89505892a21" }

