[package]
name = "zcash-zebra-aslib"
version = "1.0.0"
authors = ["Andrew Bednoff <andrcmdr@commandr.stream>"]
license = "GNU General Public License v2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibcrun = { path = "../zcash-zebra/ibcrun" }
ibclib = { path = "../zcash-zebra/ibclib" }
zebra-chain = { path = "../zcash-zebra/zebra-chain" }
zebra-state = { path = "../zcash-zebra/zebra-state" }

futures-util = "0.3.5"
tower = "0.3"

[patch.crates-io]
abscissa_core = { git = "https://github.com/yaahc/abscissa.git", rev = "41d342a9344e38442b2211b07f28a89505892a21" }
