[package]
name = "ibcrun"
version = "1.0.0"
authors = ["Andrew Bednoff <andrcmdr@commandr.stream>"]
license = "GNU General Public License v2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zebrad = { path = "../zebrad" }
